--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-NODE_ENV=dev
+NODE_ENV=devNODE_ENV=dev
+
+# Auth
+JWT_SECRET=ehtherherheh
+
+# Database
+DATABASE_URL="postgresql://docker:docker@localhost:5432/apisolid?schema=public"
