--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:watch": "vitest --dir src/use-cases",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -23,11 +24,13 @@
     "@rocketseat/eslint-config": "1.2.0",
     "@types/bcryptjs": "2.4.2",
     "@types/node": "18.16.1",
+    "@types/supertest": "2.0.12",
     "@vitest/coverage-c8": "0.30.1",
     "@vitest/ui": "0.30.1",
     "eslint": "8.39.0",
     "npm-run-all": "4.1.5",
     "prisma": "4.13.0",
+    "supertest": "6.3.3",
     "tsup": "6.7.0",
     "tsx": "3.12.6",
     "typescript": "5.0.4",
